# fava-summary-only

./: .gitignore  README.md  pyproject.toml
fava_summary_only/: SummaryOnlyExtension.js  __init__.py
fava_summary_only/templates/: SummaryOnlyExtension.html
