[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fava-summary-only"
version = "1.0.0"
description = "Fava extension: summary-only mode (hides transaction-level access)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fava>=1.26"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fava_summary_only*"]

[tool.setuptools.package-data]
fava_summary_only = ["templates/*"]
